Added delete by ID function

--- a/Hashtable Implementation/Hashtable Implementation.vcxproj.filters
+++ b/Hashtable Implementation/Hashtable Implementation.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Hashtable Implementation.cpp">
+    <ClCompile Include="Hashtable-products.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
