--- a/Hashtable Implementation/Hashtable Implementation.vcxproj
+++ b/Hashtable Implementation/Hashtable Implementation.vcxproj
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Hashtable Implementation.cpp" />
+    <ClCompile Include="Hashtable-products.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
